# BeatTheHouse

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  export_presets.cfg  project.godot
.tmp/: release_readiness_0_5_0.md
BeatTheHouse/: Money.gd  project.godot  tools.gd
docs/: NEWCOMER_GUIDE.md
scenes/: main.tscn
standalone_casino/: .gitignore  README.md  pyproject.toml
standalone_casino/src/beat_the_house/: __init__.py  games.py  main.py  models.py  progression.py  ui.py
standalone_casino/tests/: test_games.py  test_progression.py
tools/: allocation_churn_probe.gd  allocation_churn_probe.ps1  audio_adaptive_tempo_probe.gd  audio_adaptive_tempo_probe.ps1  audio_float_pcm_probe.gd  audio_float_pcm_probe.ps1  audio_harmony_selection_probe.gd  audio_jazz_choreography_probe.gd  audio_jazz_choreography_probe.ps1  audio_jazz_outcome_probe.gd  audio_jazz_outcome_probe.ps1  audio_perf_probe.gd  audio_perf_probe.ps1  audit_rendered_art.py  baccarat_interface_capture.gd  baccarat_seed_audit.gd  blackjack_seed_audit.gd  blackjack_seed_audit.ps1  capture_end_run_social.gd  capture_screenshots.gd  check_audio_harmony_selection.ps1  check_godot.ps1  collection_meta_check.ps1  endgame_metrics_probe.gd  environment_generation_audit.gd  environment_generation_audit.ps1  environment_layout_screenshots.gd  export_itch.ps1  foundation_determinism_probe.gd  foundation_determinism_probe.ps1  foundation_mouse_batch_playtest.ps1  foundation_mouse_playtest.ps1  foundation_performance_probe.gd  foundation_performance_probe.ps1  foundation_soak_probe.gd  foundation_soak_probe.ps1  (+46 more)
(+391 files in other folders)
