[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-the-house-standalone"
version = "0.1.0"
description = "Standalone casino-cheating roguelike framework replacing the Godot prototype"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
beat-the-house = "beat_the_house.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
